2009-11-14  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Antti Koivisto.

        [Qt] Broken back/forward after using ErrorPageExtension to set error page
        https://bugs.webkit.org/show_bug.cgi?id=30573

        Implemented autotests for covering the back/forward
        reset problem involving error pages.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::errorPageExtension):

2009-11-13  Adam Roben  <aroben@apple.com>

        Update for changes to FrameLoaderClient

        Fixes <http://webkit.org/b/31124> Tell the WebFrameLoadDelegate when
        window objects in isolated worlds are cleared

        Reviewed by Dave Hyatt.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidClearWindowObjectInWorld):
        * WebCoreSupport/FrameLoaderClientQt.h:
        Replaced windowObjectCleared with this function. Does nothing if the
        passed-in world is not the mainThreadNormalWorld().

2009-11-13  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Enable Page Cache if setMaximumPagesInCache needs it.
        This fixes https://bugs.webkit.org/show_bug.cgi?id=31266.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        (QWebSettings::setMaximumPagesInCache):

2009-11-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix initial QWebView focus behavior.

        focusController->setFocused(true) was not always called.
        https://bugs.webkit.org/show_bug.cgi?id=31466

        * Api/qwebpage.cpp:
        (QWebPagePrivate::focusInEvent):

2009-11-13  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        Update documentation for the Qt API

        * Api/qgraphicswebview.cpp:
        * Api/qwebelement.cpp:
        * Api/qwebframe.cpp:
        * Api/qwebsettings.cpp:
        * Api/qwebview.cpp:
